Added Sequelize and authentication by next-auth

--- a/package.json
+++ b/package.json
@@ -12,26 +12,40 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@headlessui/react": "^1.7.16",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^3.2.0",
     "@pinecone-database/pinecone": "^0.0.14",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "crypto": "^1.0.1",
+    "jsonwebtoken": "^9.0.1",
     "langchain": "^0.0.124",
     "next": "13.4.12",
+    "next-auth": "^4.22.5",
     "next-seo": "^6.1.0",
     "next-themes": "^0.2.1",
     "pdf-parse": "^1.1.1",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.4",
+    "sequelize": "^6.31.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "validator": "^13.11.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
-    "react-perfect-scrollbar": "^1.5.8"
+    "eslint": "^8.46.0",
+    "eslint-config-next": "^13.4.12",
+    "react-perfect-scrollbar": "^1.5.8",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   }
 }
