--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.4",
     "sequelize": "^6.31.0",
+    "server-only": "^0.0.1",
     "tailwindcss": "3.3.3",
     "validator": "^13.11.0",
     "yup": "^1.2.0"
